30.12.2020
    - Fix issue #935: Track list toggling of solo/mute indicators. (kybos)
28.12.2020
    - Fix: Relative paths for temporary files didn't work from AppImage,
            e.g. when calling external wave editor. (kybos)
26.12.2020
    - New: Create generic LV2 UIs based on available plugin metadata. (kybos)
25.12.2020
    - Added double click as a way to initiate changing shortcuts in the dialog (rj)
    - Changed default shortcut for SOLO track to META-N (From META-S as the system eats it 
      on multiple systems)
23.12.2020
    - New: Implement LV2 UI features FixedSize/NoUserResize. (kybos) 
22.12.2020
    - Update AppImage build scripts (AppImage is even ~8MB smaller now): 
    	1. Build on Ubuntu 16.04 for better compatibility.
	    2. Include latest versions of lv2/lilv for better HiDPI support in LV2. (kybos)
21.12.2020
    - Fix: Total number of bars not updated when signature has been changed. (kybos)
    - For issue 920: More values (480-based) in global settings midi division list. (Tim)
20.12.2020
    - Fix: Most plugin native UI windows now should behave sensibly out of the box 
            on HiDPI (of course plugins with no HiDPI/scaling support still look tiny,
            but there should be no oversized or broken Qt windows around them).
            Global setting for the HiDPI fix is now on by default, but is only active when
            at least one Hi-Res screen is found. The container window should now also 
            adjust to specific screen in multi monitor setups. (kybos)
    - Fix: More fixes for Surge and others on HiDPI. Native UI window now resizes 
            correctly when the zoom level in Surge itself is changed. (kybos)
19.12.2020
    - Fix: More fixes for HiDPI withLV2 native UIs. Surge synth should now 
            display an adequately scaled UI and not misbehave on resizing any more.
            Surge 1.7+ and liblv2 1.18 are required for scaling support. (kybos)
18.12.2020