@@ -1,5 +1,7 @@
 30.12.2020
     - Fix issue #935: Track list toggling of solo/mute indicators. (kybos)
+    - Add: Resizing track height in track list now also works for 
+        all/selected tracks (CTRL/SHIFT). (kybos) 
 28.12.2020
     - Fix: Relative paths for temporary files didn't work from AppImage,
             e.g. when calling external wave editor. (kybos)
